--- a/package.json
+++ b/package.json
@@ -9,9 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.10.4",
+    "@graphql-tools/schema": "^10.0.4",
+    "@tanstack/react-query": "^5.40.1",
+    "apollo-server-micro": "^3.13.0",
+    "axios": "^1.7.2",
+    "graphql": "^16.8.1",
+    "graphql-tag": "^2.12.6",
+    "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.3"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "typescript": "^5",
