--- a/package.json
+++ b/package.json
@@ -12,14 +12,22 @@
   "dependencies": {
     "@apollo/client": "^3.10.4",
     "@graphql-tools/schema": "^10.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@reduxjs/toolkit": "^2.2.5",
     "@tanstack/react-query": "^5.40.1",
     "apollo-server-micro": "^3.13.0",
     "axios": "^1.7.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "graphql": "^16.8.1",
     "graphql-tag": "^2.12.6",
+    "lucide-react": "^0.390.0",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-redux": "^9.1.2",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
